syntax = "proto3";

package study;
option go_package = "github.com/studyguides-com/study-guides-api/api/study;study";

message TagPath {
  string id = 1;
  string name = 2;
  string type = 3;
}
